# flashpoint

./: .env.sh  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-BOOT  README.md  designdoc.md
.agent/claude/: todo.md
.copilot/plans/: .index.md  02_foundation-mkrom.md  04_foundation-stage1-loader.md  05_foundation-cyd-hal.md  12_runtime-lua.md  14_shell-ui.md  15_polish-ports.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
boot-rom/: Cargo.toml
boot-rom/src/: main.rs
boot-rom/src/runtime/: mod.rs
boot-rom/src/shell/: mod.rs
common/: Cargo.toml
common/src/: boot.rs  constants.rs  crc.rs  error.rs  features.rs  fs.rs  gfx.rs  header.rs  io.rs  lib.rs  recovery.rs  types.rs
docs/: TESTING.md
docs/flashpoint/: recovery-mode.md
docs/plans/: .index.md  01_foundation-repo-scaffold.md  02_foundation-mkrom.md  03_foundation-build-system.md  04_foundation-stage1-loader.md  06_foundation-bootrom-e2e.md  06b_foundation-qemu-e2e.md  07_kernel-cardram.md  08_kernel-hibernate.md  09_kernel-kernelfs.md  10_kernel-app-model.md  11_runtime-wasm.md  13_runtime-host-api.md
docs/spec/: flashpoint-spec-v0.1.md  flashpoint-spec-v0.2.md
emulator/: Cargo.toml  build.rs  diagram.json  wokwi.toml
emulator/.cargo/: config.toml
emulator/src/: main.rs  platform.rs
firmware/: Cargo.toml  build.rs  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: capabilities.rs  main.rs  sd_config.rs  sd_platform.rs  stage1.rs
firmware/src/fs/: block.rs  exfat.rs  fat.rs  mod.rs
firmware/src/hal/: emulator.rs  esp32_cyd.rs  mod.rs
firmware/src/runtime/: lua.rs  mod.rs  wasm.rs
firmware/src/stage1/: cyd.rs  helpers.rs  mod.rs  qemu.rs
flash-rom/: Cargo.toml  build.rs
flash-rom/src/hal/: esp32_cyd.rs  mod.rs  platform.rs
flashpoint-common/src/: lib.rs
hal/cyd/: Cargo.toml
hal/cyd/src/: input.rs  lib.rs  storage.rs
hal/qemu/: Cargo.toml  refactor_qemu.py
hal/qemu/src/: display.rs  input.rs  lib.rs  storage.rs  system.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: main.rs
kernel/src/kernel/: mod.rs
scripts/: install-deps.sh  monitor.sh
stage1/: Cargo.toml  build.rs
stage1/src/: main.rs
tools/: Cargo.toml
tools/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs  rom.rs
