[workspace]
members = [
    "flashpoint-common",
    "tools",
    "xtask",
    "stage1",
    "boot-rom",
    "flash-rom",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Merith-TK"]

[profile.release]
opt-level = "s"   # size-optimized for embedded
lto = true
codegen-units = 1
