[workspace]
members = [
    "common",
    "xtask",
    "kernel",
    "firmware",
    "emulator",
]
# embedded crates target xtensa-esp32-espidf — exclude from default host builds
default-members = [
    "common",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Merith-TK"]

[profile.release]
opt-level = "s"   # size-optimized for embedded
lto = true
codegen-units = 1
