[package]
name = "firmware"
version.workspace = true
edition.workspace = true

# firmware is the Flash-ROM for all supported boards.
# Select a board at build time via feature flag:
#   --features board-cyd   (default) — CYD ESP32-2432S028R
#   --no-default-features --features board-qemu — QEMU xtensa-esp32

[features]
default = ["board-cyd"]
board-cyd  = ["dep:hal-cyd",  "dep:esp-idf-svc", "dep:log", "common/std"]
board-qemu = ["dep:hal-qemu", "dep:esp-idf-svc", "dep:log", "common/std"]

[dependencies]
common    = { path = "../common", default-features = false }
hal-cyd   = { path = "../hal/cyd",  optional = true }
hal-qemu  = { path = "../hal/qemu", optional = true }
esp-idf-svc = { version = "0.52", features = ["binstart"], optional = true }
log = { version = "0.4", optional = true }

[build-dependencies]
embuild = "0.33"
