[package]
name = "firmware"
version.workspace = true
edition.workspace = true

# firmware is the Flash-ROM for all supported boards.
# Select a board at build time via feature flag:
#   --features board-cyd   (default) — CYD ESP32-2432S028R
#   --no-default-features --features board-qemu — QEMU xtensa-esp32

[features]
default = ["board-cyd"]
embedded-sdmmc = ["dep:embedded-sdmmc"]
exfat-slim     = ["dep:exfat-slim"]
board-cyd  = ["dep:hal-cyd",  "dep:esp-idf-svc", "dep:log", "common/std", "embedded-sdmmc", "exfat-slim", "dep:tinykv"]
board-qemu = ["dep:hal-qemu", "dep:esp-idf-svc", "dep:log", "common/std", "embedded-sdmmc", "exfat-slim", "dep:tinykv"]
test-image = ["common/test-image"]

[dependencies]
common    = { path = "../common", default-features = false }
hal-cyd   = { path = "../hal/cyd",  optional = true }
hal-qemu  = { path = "../hal/qemu", optional = true }
esp-idf-svc = { version = "0.52", features = ["binstart"], optional = true }
log = { version = "0.4", optional = true }

# Filesystem backends — both only needed for board targets, not host tools
embedded-sdmmc = { version = "0.7", optional = true }
exfat-slim     = { version = "0.4", features = ["log"], optional = true }
# SD-backed config store (no_std + nanoserde, no host file I/O)
tinykv         = { version = "0.4", default-features = false, features = ["nanoserde"], optional = true }

[package.metadata.esp-idf-sys]
esp_idf_sdkconfig_defaults = ["firmware/sdkconfig.defaults"]

[build-dependencies]
embuild = "0.33"
