[package]
name = "flash-rom"
version.workspace = true
edition.workspace = true

# flash-rom runs on the ESP32 via esp-idf (std).
# Target: xtensa-esp32-espidf (set in .cargo/config.toml for this crate)
# Requires: Xtensa toolchain + esp-idf via espup

[dependencies]
flashpoint-common = { path = "../flashpoint-common", default-features = false }

# TODO (step 0.5): uncomment when ESP32 toolchain is confirmed installed
# esp-idf-sys  = { version = "0.34", features = ["binstart"] }
# esp-idf-hal  = "0.43"
# mipidsi      = "0.8"
# display-interface-spi = "0.4"
# embedded-sdmmc = "0.7"
