[package]
name = "kernel"
version.workspace = true
edition.workspace = true

# kernel is hardware-agnostic — it calls the Platform trait only.
# Loaded by firmware (Stage 1) at runtime; can come from SD card or internal flash.
# Target: xtensa-esp32-espidf (std via esp-idf)
# Requires: Xtensa toolchain + esp-idf via espup

[dependencies]
flashpoint-common = { path = "../common", default-features = false }

# The Platform trait is defined in common. kernel depends on it at link
# time via the vtable pointer published at PLATFORM_PTR_ADDR — not as a Cargo dep.
# This keeps kernel free of any hardware crate dependency.

# TODO (step 0.5): uncomment when ESP32 toolchain is confirmed installed
# esp-idf-sys = { version = "0.34", features = ["binstart"] }
