[package]
name = "kernel"
version.workspace = true
edition.workspace = true

# kernel is hardware-agnostic — it calls the Platform trait only.
# Loaded by firmware (Stage 1) at runtime; can come from SD card or internal flash.
# Target: xtensa-esp32-espidf (std via esp-idf)
# Requires: Xtensa toolchain + esp-idf via espup

[dependencies]
common = { path = "../common", default-features = false }
esp-idf-sys = { version = "0.37" }

[build-dependencies]
embuild = "0.33"
