[package]
name = "hal-cyd"
version.workspace = true
edition.workspace = true

[dependencies]
common      = { path = "../../common", default-features = false, features = ["std"] }
esp-idf-svc = { version = "0.52" }
log         = "0.4"

# Display driver (ILI9341 via SPI)
mipidsi               = "0.8"
display-interface-spi = "0.5"
embedded-graphics-core = "0.4"

# SD card raw sector I/O
embedded-sdmmc = "0.7"

[build-dependencies]
embuild = "0.33"
